--- a/procesos/style_procesos.css
+++ b/procesos/style_procesos.css
@@ -8,7 +8,7 @@ body {
     margin: 0;
 }
 
-.calculator {
+#calculator {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -83,8 +83,7 @@ th, td {
     text-align: center;
 }
 
+/* contador global */
 #timer {
     font-size: larger;
 }
-
-
