updated ramdom size to processes and dark mode

--- a/procesos/ventana.css
+++ b/procesos/ventana.css
@@ -10,7 +10,8 @@
 }
 
 .contenido {
-    background-color: #fff;
+    background-color: #080303;
+    /*background-color: #fff;*/
     margin: auto auto;
     padding: 20px;
     width: 60%;
