--- a/procesos/style_procesos.css
+++ b/procesos/style_procesos.css
@@ -1,6 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #080303;
+    /*background-color: #f4f4f4;*/
+    /*color: #080303;*/
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +49,8 @@ body {
 
 /* Estilos para main */
 main {
-    background-color: #fff;
+    /*background-color: #f4f4f4;*/
+    background-color: #080303;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     padding: 20px;
