--- a/procesos/style_procesos.css
+++ b/procesos/style_procesos.css
@@ -92,3 +92,19 @@ th, td {
 #timer {
     font-size: larger;
 }
+
+/*paginacion*/
+#paginacion {
+    margin-top: 50px;
+}
+
+.cuadro {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    /*border: 1px solid black;*/
+    border: 1px solid white;
+    display: inline-block;
+    place-content: center;
+    align-items: center
+}
