--- a/procesos/ventana.css
+++ b/procesos/ventana.css
@@ -1,10 +1,10 @@
 .ventana {
     display: none;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
 }
@@ -14,7 +14,7 @@
     /*background-color: #fff;*/
     margin: auto auto;
     padding: 20px;
-    width: 60%;
+    width: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
     position: relative;
